exports[`site rest endpoint should add model 1`] = `
Array [
  Object {
    "__v": 0,
    "address": "123 Main St",
    "coordinate": Object {
      "lat": 0,
      "lng": 0,
    },
    "name": "test-site",
    "original_address": "123 Main St",
  },
]
`;

exports[`site rest endpoint should get model 1`] = `
Object {
  "__v": 0,
  "address": "Takoma, Takoma Park, MD, USA",
  "city": "Takoma Park",
  "coordinate": Object {
    "lat": 38.976745,
    "lng": -77.023104,
  },
  "country": "United States",
  "county": "Montgomery County",
  "name": "test-site",
  "original_address": "123 Main St",
  "state": "Maryland",
}
`;

exports[`site rest endpoint should update model 1`] = `
Object {
  "__v": 0,
  "address": "123 Main St",
  "coordinate": Object {
    "lat": 0,
    "lng": 0,
  },
  "name": "updated name",
  "original_address": "123 Main St",
}
`;
